--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "socket.io-client": "^4.8.1",
+    "universal-cookie": "^8.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
